gccida/g0/make_extraction
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6380:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v15; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6384:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v19; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6389:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode inner_mode; // [rsp+6Ch] [rbp-54h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6391:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode; // [rsp+7Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6392:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_mode; // [rsp+80h] [rbp-40h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6393:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode is_mode; // [rsp+84h] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6394:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pos_mode; // [rsp+88h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6395:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode wanted_inner_reg_mode; // [rsp+8Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6397:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode extraction_mode; // [rsp+94h] [rbp-2Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6406:36: error: invalid suffix 'xmode' on integer constant
wanted_inner_reg_mode = *(short *)0xmode; 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6407:23: error: invalid suffix 'xmode' on integer constant
pos_mode = *(short *)0xmode; 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6408:30: error: invalid suffix 'xmode' on integer constant
extraction_mode = *(short *)0xmode; 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/combine.c:6514:31: error: use of undeclared identifier 'machine_mode'
&& ( nonzero_bits( pos_rtx, ( machine_mode)*( ( unsigned __int8 *)pos_rtx + 2)) & ~( mode_mask_array[*( ( unsigned __int8 *)pos_rtx + 2)] >> 1)) == 0 ) 
                              ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/make_extraction/src/obj/combine.o] Error 1
